# [rights]  Copyright 2020 brianddk at github https://github.com/brianddk
# [license] Apache 2.0 License https://www.apache.org/licenses/LICENSE-2.0
# [repo]    https://github.com/brianddk/pypaperwallet
# [btc]     BTC-b32: bc1qwc2203uym96u0nmq04pcgqfs9ldqz9l3mz8fpj
# [tipjar]  https://gist.github.com/brianddk/3ec16fbf1d008ea290b0

# Dist mini-howto
# git tag -s vX.Y -m "my annotated tag"
# git push origin --tags
# python37 setup.py sdist
# python37 -m pip install twine
# python37 -m twine check dist\*
# python37 -m twine upload --repository-url https://test.pypi.org/legacy/ dist\*
# python37 -m twine upload dist\*

# git push --delete origin tagName
# git tag -d tagName


[metadata]
name = pypaperwallet
version = 0.3
description = Python Paper Wallet
long_description_content_type= text/markdown
long_description = file: README.md
keywords = paperwallet, bitcoin
author = brianddk
author_email = brianddk@users.noreply.github.com
license = Apache License 2.0
url = https://github.com/brianddk/pypaperwallet
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Bug Reports = https://github.com/brianddk/pypaperwallet/issues
    Source = https://github.com/brianddk/pypaperwallet

[options]
# package_dir=
    # =.
packages=find:
zip_safe = True
install_requires =
  pip         >= "9.0.0"
  setuptools  >= "39.2.0"
  mnemonic    >= "0.19"
  pycoin      >= "0.90.20190728"
  qrcode[pil] >= "6.1"
  WeasyPrint  >= "51"

# include_package_data = True

# [options.packages.find]
# where=.

# [options.package_data]
# * = README.md, LICENSE
